--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,13 +32,14 @@ services:
     expose:
       - '3000'
     environment:
-      - VIRTUAL_HOST=expresfrm.pro
-      - LETSENCRYPT_HOST=expresfrm.pro
+      - VIRTUAL_HOST=crediexpress.autos
+      - LETSENCRYPT_HOST=crediexpress.autos
       - VIRTUAL_PORT=3000  # Nuxt server
-      - SOCKET_URL=https://server-sockets-forum.expresfrm.pro
+      - SOCKET_URL=https://server-sockets-forum.crediexpress.autos
       - MP_ACCESS_TOKEN=APP_USR-4039038878469211-050713-bb150db840d6fc80cd7b8a457630aacd-2018575679
       - MP_PUBLIC_KEY=APP_USR-bc717edb-9ce3-42e9-8f97-0752e736be60
-      - MP_NOTIFICATION_URL=https://expresfrm.pro/api/webhook/mercadopago
+      - MP_NOTIFICATION_URL=https://crediexpress.autos/api/webhook/mercadopago
+      - CLIENT_URL=https://crediexpress.autos
 
   server-sockets-forum:
     image: server-sockets-forum
@@ -48,11 +49,11 @@ services:
     expose:
       - '3001'
     environment:
-      - VIRTUAL_HOST=server-sockets-forum.expresfrm.pro
-      - LETSENCRYPT_HOST=server-sockets-forum.expresfrm.pro
+      - VIRTUAL_HOST=server-sockets.crediexpress.autos
+      - LETSENCRYPT_HOST=server-sockets.crediexpress.autos
       - SOCKET_PORT=3001
       - SOCKET_HOST=0.0.0.0
-      - CLIENT_URL=https://expresfrm.pro
+      - CLIENT_URL=https://crediexpress.autos
       
 volumes:
   conf:
